fix: trying footer menu layout on mobile

--- a/main.css
+++ b/main.css
@@ -537,6 +537,10 @@ div.suggestion-nav {
         padding-top: 27px;
         border-top: 1px solid #E8E8E8;
     }
+    .footer-menu-content {
+        padding: 0;
+        width: fit-content;
+    }
 }
 
 .footer-icons>ul>li, .menu-nav-container>ul>li {
